# alpha

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  Makefile  README.md  README.rst  mkdocs.yml  nohup.out  pyproject.toml  pyrightconfig.json  reload.sh  requirements_dev.txt  setup.cfg  setup.py  start.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
alpha/: __init__.py  app.py  cli.py  server.py  交易员评估.ipynb
alpha/backtest/: __init__.py  _plotting.py  _stats.py  _util.py  backtesting.py  lib.py
alpha/backtest/test/: __init__.py  __main__.py  _test.py
alpha/backtesting/: __init__.py  backtest.py  broker.py  errors.py  forward_array.py  order.py  position.py  strategy.py  trade.py
alpha/config/: __init__.py  cfg4py_auto_gen.py  defaults.yaml  defaults.yml  dev.yml  schema.py
alpha/core/: __init__.py  commons.py  concurrent.py  console.py  const.py  enums.py  errors.py  executor.py  features.py  glance.py  marketglance.py  monitor.py  morph.py  morphalpatterns.py  notify.py  redislog.py  remote.py  rsi_stats.py  signal.py  smvecstore.py  stocks.py  veccollection.py  vecstore.py  view.py
alpha/core/monitors/: __init__.py  manager.py
alpha/features/: maline.py  stockmath.py  tradelimits.py  volume.py
alpha/jobs/: __init__.py  __main__.py  monitor.py  post.py  stockpooling.py
alpha/ml/: index_sh_pv.py
alpha/monitor/: manager.py  monitors.py
alpha/notebook/: 5线顺上.ipynb  K线图.ipynb  Monitor.ipynb  Untitled.ipynb  __init__.py  byVolume.ipynb  nohup.out  rsi.json  rsi.tsv  save_to  sharpe.ipynb  trendline.ipynb  twins.ipynb  upturn.ipynb  wildguess.ipynb  zgc.ipynb  【博文】趋势走平的研究.ipynb  【监控】万花筒.ipynb  【监控】低位首板.ipynb  【监控】大盘和持仓.ipynb  【监控】大盘和持仓个股.ipynb  【监控】机构调研.ipynb  【监控】涨停洗盘.ipynb  【研究】 均线选股.ipynb  【研究】如何探测底和顶？.ipynb  交易员评估.ipynb  仙人指路.ipynb  低位放量.ipynb  利民股份.ipynb  回头波.ipynb  圆弧底.ipynb  基金研究.ipynb  大盘.ipynb  如何探测底和顶？.ipynb  平台突破.ipynb  底部上攻.ipynb  数据维护.ipynb  昨日首板.ipynb  智能RSI.ipynb  月线多头.ipynb  (+10 more)
alpha/notify/: itek.py
alpha/plots/: __init__.py  base.py  baseplot.py  cross.py  crossyear.py  duck.py  extendline.py  fixprice.py  glance.py  hrp.py  longparallel.py  maline.py  momemtum.bak.py  momemtum.py  momentum.py  nine.py  one.py  two.py
alpha/plotting/: __init__.py  backtest_result.py  candlestick.py  patterns.py
alpha/strategies/: __init__.py  __main__.py  base.py  base_pattern_strategy.py  base_xgboost_strategy.py  breakout_strategy.py  databunch.py  factory.py  flatsearch.py  gridstrategy.py  hydra.py  m1.py  ml_strategy_base.py  momentum.py  month.py  seven.py  simlines.py  simvec.py  sma.py  theforce.py  twins.py  upturn.py  wildgoose.py  wildguess.py  z01.py  z02.py  z03.py  z04.py  z05.py  z06.py  z07.py  z08.py  z09.py  z10.py  z51.py  zgc.py
alpha/utils/: __init__.py
alpha/utils/data/: __init__.py  barsstore.py  databunch.py  securities.py
alpha/web/: __init__.py  layout.py  routing.py  session.py  utils.py
alpha/web/assets/js/: util.js
alpha/web/auth/: __init__.py  controller.py  models.py  view.py
alpha/web/components/: header.py  layout.py  scaffold.py  sidebar.py  widgets.py
alpha/web/homepage/: __init__.py  controller.py  view.py
alpha/web/pages/: __init__.py  backtest.py  homepage.py  layout.py  login.py  research.py  textbox.py  widgets.py
alpha/web/research/: __init__.py  view.py
alpha/web/views/: backtest.py  homepage.py  layout.py  research.py  widgets.py
alpha/web/widgets/: __init__.py
config/: __init__.py  cfg4py_auto_gen.py  defaults.yaml
data/: sh_30m_pv_labbelled.pkl  sv-30m.tsv  机构调研-信号.txt  机构调研.txt
docs/: Makefile  api.md  conf.py  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
tests/: 000001.XSHG.1d.csv  __init__.py  base.py  test_alpha.py  test_console.py  test_crossyear.py  test_duck.py  test_glance.py  test_itek.py  test_maline.py  test_momentum.py  test_monitor.py  test_plots.py  test_signal.py  test_two.py
tests/backtesting/: test_backtest.py  test_forward_array.py  test_strategy.py
tests/core/: test_executor.py  test_features.py  test_morph.py  test_remote.py  test_rsi_stats.py  test_smvecstore.py  test_veccollection.py  test_vecstore.py
tests/data/: sh.30m.20111105.200.csv
tests/features/: test_maline.py  test_stockmath.py  test_tradelimits.py  test_volume_features.py
tests/ml/: test_indexshpv.py
tests/notebook/: test_notebook.py
tests/strategies/: test_factory.py  test_flatsearch.py  test_hydra.py  test_m1.py  test_morphalpatterns.py  test_simlines.py  test_simvec.py  test_strategies.py  test_twins.py  test_upturn.py  test_wildgoose.py  test_wildguess.py  test_x.py  test_z01.py  test_z03.py  test_z04.py  test_z05.py  test_z51.py  test_zgc.py
tests/utils/: test_utils.py
tests/utils/data/: test_securities.py
