[tool]

[tool.poetry]
name = "alpha"
version = "0.2.1"
homepage = "https://github.com/zillionare/alpha"
description = "Skeleton project created by Python Project Wizard (ppw)."
authors = ["Aaron Yang <code@jieyu.ai>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "alpha" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.dependencies]
python = ">3.8,<3.9"
fire = "0.4.0"
cfg4py = "^0.9.3"
psutil = "^5.8.0"
zillionare-omicron = {version = "^2.0.0.a30", allow-prereleases = true}
plotly = "^5.6.0"
asgiref = "^3.5.0"
APScheduler = "^3.9.1"
rpyc = "^5.1.0"
dill = "^0.3.4"
ckwrap = "^0.1.9"
TA-Lib = "^0.4.24"
jqdatasdk = "^1.8.10"
zarr = "^2.11.3"
pyemit = "0.4.5"

black  = { version = "^22.3", optional = true}
isort  = { version = "5.6.4", optional = true}
flake8  = { version = "3.8.4", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "6.1.2", optional = true}
pytest-cov  = { version = "2.10.1", optional = true}
tox  = { version = "^3.20.1", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^20.3.1", optional = true}
mkdocs  = {version = "^1.3", optional = true}
mkdocs-include-markdown-plugin  = { version = "^1.0.0", optional = true}
mkdocs-material  = "^8.2.15"
mkdocstrings  = { version="^0.18", optional = true }
mkdocs-material-extensions  = { version = "^1.0.1", optional = true}
mkdocs-awesome-pages-plugin = { version = "^2.6.0", optional = true}
twine  = { version = "^3.3.0", optional = true}
pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
"ruamel.yaml" = {version ="^0.17.4", optional = true}
mkdocs-autorefs = {version="^0.4.1", optional = true}
mkdocstrings-python = "^0.6.6"
rlog = "^0.3"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "ruamel.yaml"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.poetry.scripts]
alpha = 'alpha.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | .history
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
